# binanana

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: symbol_report.yml
extension/: .gitignore  build.gradle  extension.properties  settings.gradle
ghidra/: analyze_lea_refs.py  analyze_lua_api.py  analyze_lua_tables.py  analyze_rtti.py  analyze_strings.py  analyze_vtables.py  export_symbols.py  import_symbols.py  propagate_symbols.py
profile/agent-3.13.3-9370-windows-i386/: info.json
profile/backgrounddownloader-1.12.1-5875-windows-i386/: info.json
profile/backgrounddownloader-2.4.3-8606-windows-i386/: info.json
profile/backgrounddownloader-3.3.5a-12340-windows-i386/: info.json
profile/backgrounddownloader-4.3.4-15595-windows-i386/: info.json
profile/blizzard-updater-4.3.4-15595-windows-i386/: info.json
profile/classic-1.13.2-31650-windows-win64/: info.json
profile/classic-era-1.14.0-40618-windows-win64/: info.json
profile/classic-era-1.14.1-41794-windows-win64/: info.json
profile/classic-era-1.14.2-42597-windows-win64/: info.json
profile/classic-era-1.15.2-55140-macos-arm64/: info.json
profile/classic-era-1.15.2-55140-windows-win64/: info.json
script/: analyze  build-extension  compile-symbols  dump-client  export-from-binja  install-extension  propagate-from-binja  setup-ghidra
tools/: compile_symbols.py  validate_profile.py
tools/wow-dumper/: .mise.toml  Cargo.toml  PLAN.md
tools/wow-dumper/src/: arxan.rs  main.rs  patterns.rs  pe.rs  process.rs
(+73 files in other folders)
