[package]
name = "wow-dumper"
version = "0.1.0"
edition = "2021"
description = "Dump Arxan-protected WoW Classic binaries from memory"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
goblin = "0.9"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
]
